--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -71,9 +71,9 @@
                                 <td th:text="${flight.flightNumber}"> ***</td>
                                 <td th:text="${flight.departureAirport.airportName}"> ***</td>
 
-                                <td th:text="${flight.departureDate}"> ***</td>
+                                <td th:text="${#strings.replace(flight.departureDate,'T',' - ')}"> ***</td>
                                 <td th:text="${flight.arrivalAirport.airportName}"> ***</td>
-                                <td th:text="${flight.arrivalDate}"> ***</td>
+                                <td th:text="${#strings.replace(flight.arrivalDate,'T',' - ')}"> ***</td>
                                 <td>
                                     <div class="d-flex justify-content-left">
                                         <a th:href="@{/editFlight/{id}(id=${flight.id})}"
