--- a/src/main/resources/templates/flights.html
+++ b/src/main/resources/templates/flights.html
@@ -32,26 +32,56 @@
             <div class="controls-row row">
                 <div class="control-group col-md-9">
                     <div class="input-group">
-                        <p th:text="${airportDto.airportName}"></p>
-                        <p th:text="${airportDto.airportCity}"></p>
-                        <p th:text="${airportDto.airportCountry}"></p>
-                        <p th:text="${airportDto.airportCode}"></p>
-                        <p th:text="${airportDto.latitude}"></p>
-                        <p th:text="${airportDto.longitude}"></p>
+                        <div class="row">
+                            <ul id="airport_description">
+                                <li th:text="'Airport name: ' + ${#strings.toUpperCase(airportDto.airportName)} + ' (' + ${airportDto.airportCode} + ')'"></li>
+                                <li th:text="'City: ' +  ${#strings.toUpperCase(airportDto.airportCity)}"></li>
+                                <li th:text="'Country: ' + ${#strings.toUpperCase(airportDto.airportCountry)}"></li>
+                                <li th:text="'GPS coordinates - Latitude: ' + ${airportDto.latitude}"></li>
+                                <li th:text="'GPS coordinates - Longitude: ' + ${airportDto.longitude}"></li>
+                                </li>
+                            </ul>
+                        </div>
+                        <br>
                         <hr>
-                        <table>
-                            <th></th>
-                            <tr th:each="flight : ${listOfSearchedFlights}">
-                                <td th:text="${flight.airline.airlineName + ' (' + flight.airline.airlineCode + ')'}">
-                                    ***
-                                </td>
-                                <td th:text="${flight.flightNumber}"> ***</td>
-                                <td th:text="${flight.departureAirport.airportName}"> ***</td>
-                                <td th:text="${#dates.format(flight.departureDate, 'dd.MM.yyyy HH:mm')}"> ***</td>
-                                <td th:text="${flight.arrivalAirport.airportName}"> ***</td>
-                                <td th:text="${#dates.format(flight.arrivalDate, 'dd.MM.yyyy HH:mm')}"> ***</td>
-                            </tr>
-                        </table>
+                        <div class="row">
+                            <h4 id="table_title">Next departure flights</h4>
+                            <table id="flight_departure" class="table table-bordered border-light">
+                                <th scope="col">Airline</th>
+                                <th scope="col">Flight No</th>
+                                <th scope="col">Departure Date</th>
+                                <th scope="col">Arrival Airport</th>
+                                <th scope="col">Arrival Date</th>
+                                <tr th:each="flight : ${listOfSearchedFlights}">
+                                    <td th:text="${flight.airline.airlineName + ' (' + flight.airline.airlineCode + ')'}">
+                                        ***
+                                    </td>
+                                    <td th:text="${flight.flightNumber}"> ***</td>
+                                    <td th:text="${#dates.format(flight.departureDate, 'dd.MM.yyyy HH:mm')}"> ***</td>
+                                    <td th:text="${flight.arrivalAirport.airportName}"> ***</td>
+                                    <td th:text="${#dates.format(flight.arrivalDate, 'dd.MM.yyyy HH:mm')}"> ***</td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="row">
+                            <h4 id="table_arrival_title">Next arrival flights</h4>
+                            <table id="flight_arrival" class="table table-bordered border-light">
+                                <th scope="col">Airline</th>
+                                <th scope="col">Flight No</th>
+                                <th scope="col">Departure Airport</th>
+                                <th scope="col">Departure Date</th>
+                                <th scope="col">Arrival Date</th>
+                                <tr th:each="flight : ${listArrivalFlights}">
+                                    <td th:text="${flight.airline.airlineName + ' (' + flight.airline.airlineCode + ')'}">
+                                        ***
+                                    </td>
+                                    <td th:text="${flight.flightNumber}"> ***</td>
+                                    <td th:text="${flight.departureAirport.airportName}"> ***</td>
+                                    <td th:text="${#dates.format(flight.departureDate, 'dd.MM.yyyy HH:mm')}"> ***</td>
+                                    <td th:text="${#dates.format(flight.arrivalDate, 'dd.MM.yyyy HH:mm')}"> ***</td>
+                                </tr>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
