--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -33,13 +33,15 @@
                     <div class="row mb-3">
                         <label id="signin_label" for="inputEmail" class="col-sm-2 col-form-label">Email</label>
                         <div class="col-sm-7">
-                            <input type="email" class="form-control" th:field="*{email}" id="inputEmail" required>
+                            <input type="email" class="form-control" th:field="*{email}" id="inputEmail" required
+                                   placeholder="email@email.ro">
                         </div>
                     </div>
                     <div class="row mb-3">
                         <label id="signin_label" for="password" class="col-sm-2 col-form-label">Password</label>
                         <div class="col-sm-7">
-                            <input type="password" class="form-control" th:field="*{password}" id="password" required>
+                            <input type="password" class="form-control" th:field="*{password}" id="password" required
+                                   placeholder="min 6 characters">
                         </div>
                     </div>
                     <div class="row mb-3">
@@ -59,7 +61,9 @@
                         </button>
                     </div>
                     <div class="row sm-10" th:if="${param.success}">
-                        <div class="row mb-7 alert success">Congratulations! You are ready to fly! <br> Registration complete!</div>
+                        <div class="row mb-7 alert success">Congratulations! You are ready to fly! <br> Registration
+                            complete!
+                        </div>
                     </div>
                 </form>
             </div>
