Format code and clean up imports, add FlightSesrchDto class

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -36,9 +36,11 @@
                         <div class="card bg-transparent">
                             <div class="card-body bg-transparent text-white">
                                 <h5 class="card-title"><b>About project</b></h5>
-                                <p class="card-text">This is a project for class <b>JAVA-NATIONAL-05</b>, from <b>Scoala Informala
+                                <p class="card-text">This is a project for class <b>JAVA-NATIONAL-05</b>, from <b>Scoala
+                                    Informala
                                     de It</b>, in wich present the overall knowledge of programming in Java.
-                                    The tehnologies used are <b>Spring</b>, <b>JPA</b>, <b>Postgresql</b> for back-end, <b>Thymeleaf</b>, <b>Bootstrap</b>
+                                    The tehnologies used are <b>Spring</b>, <b>JPA</b>, <b>Postgresql</b> for back-end,
+                                    <b>Thymeleaf</b>, <b>Bootstrap</b>
                                     for front-end. <br>
                                     The project present a virtual airline portal, in wich we added some airports,
                                     airlines, and we can navigate through them, finding the designated flights. <br>
@@ -54,7 +56,8 @@
                         <div class="card bg-transparent">
                             <div class="card-body bg-transparent text-white">
                                 <h5 class="card-title">About author</h5>
-                                <p class="card-text">My name is <b>Cosmin</b>, 47 years old, trying to reconvert to a JAVA
+                                <p class="card-text">My name is <b>Cosmin</b>, 47 years old, trying to reconvert to a
+                                    JAVA
                                     developer carrier. Passionate about tehnologies, and IT, I enrolled my self in
                                     <b>Scoala Informala de It</b>, for achieving my dream to be a programmer.<br>
                                     I love the challanges that programming is faceing, the dynamic way of interacting
@@ -72,7 +75,6 @@
         </div>
     </div>
 </section>
-
 
 <footer th:replace="footer::footer-base"></footer>
 
