--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -13,12 +13,14 @@
         <div class="col-md-6">
             <ul class="list-inline">
                 <li><a id="footer-a1" href="http://www.scoalainformala.ro">SIIT</a></li>
-                <li><a id="footer-a2" href="https://scoalainformala.ro/program/java-development/">JAVA Development</a></li>
+                <li><a id="footer-a2" href="https://scoalainformala.ro/program/java-development/">JAVA Development</a>
+                </li>
                 <li><a id="footer-a3" href="https://scoalainformala.ro/our_team/danut-chindris/">Mentor</a></li>
                 <li><a id="footer-a4" href="#">No Privacy related issues</a></li>
                 <li><a id="footer-a5" href="https://scoalainformala.ro/contact/">Contact</a></li>
             </ul>
-            <p class="copyright">Copyright © 2021 - <a id="name-footer" href="https://www.net-instructor.ro" target="_blank">Cosmin Bondoi</a> - All Rights
+            <p class="copyright">Copyright © 2021 - <a id="name-footer" href="https://www.net-instructor.ro"
+                                                       target="_blank">Cosmin Bondoi</a> - All Rights
                 Reserved.
             </p>
         </div>
