--- a/src/main/resources/templates/add-flight.html
+++ b/src/main/resources/templates/add-flight.html
@@ -102,7 +102,8 @@
                                                class="col-sm-3 col-form-label">Arrival - date/time</label>
                                         <div class="col-sm-7">
                                             <div class="form-group form-control inline bg-transparent">
-                                                <input class="form-control" id="date-arrival-width" type="datetime-local"
+                                                <input class="form-control" id="date-arrival-width"
+                                                       type="datetime-local"
                                                        th:field="*{{arrivalDate}}"
                                                        name="arrivalDate">
                                             </div>
