--- a/src/main/resources/templates/flights.html
+++ b/src/main/resources/templates/flights.html
@@ -49,17 +49,17 @@
                             <table id="flight_departure" class="table table-bordered border-light">
                                 <th scope="col">Airline</th>
                                 <th scope="col">Flight No</th>
-                                <th scope="col">Departure Date</th>
                                 <th scope="col">Arrival Airport</th>
+                                <th scope="col">Departure Date</th>
                                 <th scope="col">Arrival Date</th>
                                 <tr th:each="flight : ${listOfSearchedFlights}">
                                     <td th:text="${flight.airline.airlineName + ' (' + flight.airline.airlineCode + ')'}">
                                         ***
                                     </td>
                                     <td th:text="${flight.flightNumber}"> ***</td>
-                                    <td th:text="${#dates.format(flight.departureDate, 'dd.MM.yyyy HH:mm')}"> ***</td>
                                     <td th:text="${flight.arrivalAirport.airportName}"> ***</td>
-                                    <td th:text="${#dates.format(flight.arrivalDate, 'dd.MM.yyyy HH:mm')}"> ***</td>
+                                    <td th:text="${#strings.replace(flight.departureDate,'T',' - ')}"> ***</td>
+                                    <td th:text="${#strings.replace(flight.arrivalDate,'T',' - ')}"> ***</td>
                                 </tr>
                             </table>
                         </div>
@@ -77,8 +77,8 @@
                                     </td>
                                     <td th:text="${flight.flightNumber}"> ***</td>
                                     <td th:text="${flight.departureAirport.airportName}"> ***</td>
-                                    <td th:text="${#dates.format(flight.departureDate, 'dd.MM.yyyy HH:mm')}"> ***</td>
-                                    <td th:text="${#dates.format(flight.arrivalDate, 'dd.MM.yyyy HH:mm')}"> ***</td>
+                                    <td th:text="${#strings.replace(flight.departureDate,'T',' - ')}"> ***</td>
+                                    <td th:text="${#strings.replace(flight.arrivalDate,'T',' - ')}"> ***</td>
                                 </tr>
                             </table>
                         </div>
