#7 Add search by airline, update airport and airlines pages

--- a/src/main/resources/templates/airlines.html
+++ b/src/main/resources/templates/airlines.html
@@ -54,7 +54,7 @@
                             <td>
                                 <a id="airline_list_index"
                                    th:text="${airline.airlineName} + ' (' + ${airline.airlineCode} + ')' + ' - ' + ${airline.airlineCountry}"
-                                   href="https://www.google.com">link</a>
+                                   th:href="@{/searchFlightsByAirline/{id}(id=${airline.id})}">link</a>
                             </td>
                         </tr>
                     </table>
