--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,36 +24,41 @@
             <p class="lead">Just select your favorite destination, and let us do the search for you.</p>
             <hr class="my-4">
         </div>
+        <div class="mb-6">
+            <div th:if="${param.success}" class="alert-success text-black">
+                You have been successfully logged in.
+            </div>
+        </div>
     </div>
 </section>
 <section>
     <div class="container">
-        <div
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="card bg-transparent">
-                    <div class="card-body bg-transparent text-white">
-                        <h5 class="card-title">AIRPORTS</h5>
-                        <p class="card-text">Our partner airport are listed in the "Airport" section.
-                            Use the search field above to look for the desired airport.
-                            Check for the flight listed in the airports schedule, and fly away.</p>
-                        <a th:href="@{/airports/{page}(page=1)}" class="btn btn-primary">Airports -></a>
+        <div>
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="card bg-transparent">
+                        <div class="card-body bg-transparent text-white">
+                            <h5 class="card-title">AIRPORTS</h5>
+                            <p class="card-text">Our partner airport are listed in the "Airport" section.
+                                Use the search field above to look for the desired airport.
+                                Check for the flight listed in the airports schedule, and fly away.</p>
+                            <a th:href="@{/airports/{page}(page=1)}" class="btn btn-primary">Airports -></a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-sm-6">
-                <div class="card bg-transparent">
-                    <div class="card-body bg-transparent text-white">
-                        <h5 class="card-title">AIRLINES</h5>
-                        <p class="card-text">You can choose from our variety of airlines to plan your journey.
-                            See the flights provided and fit one for your convenience.
-                            We ensure you, you will not be desapointed. Spread your wings and fly.</p>
-                        <a th:href="@{/airlines/{page}(page=1)}" class="btn btn-primary">Airlines -></a>
+                <div class="col-sm-6">
+                    <div class="card bg-transparent">
+                        <div class="card-body bg-transparent text-white">
+                            <h5 class="card-title">AIRLINES</h5>
+                            <p class="card-text">You can choose from our variety of airlines to plan your journey.
+                                See the flights provided and fit one for your convenience.
+                                We ensure you, you will not be desapointed. Spread your wings and fly.</p>
+                            <a th:href="@{/airlines/{page}(page=1)}" class="btn btn-primary">Airlines -></a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
     </div>
 </section>
 <section>
